<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="155dp"
        android:layout_height="152dp"
        android:contentDescription="@string/logo_desc"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20dp"
        android:layout_marginTop="70dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMulai"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="105dp"
        android:text="Mulai" />

</LinearLayout>
